--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
 			<h3 id="howhead">
 				How We Do It
 			</h3>
-			<iframe src="https://www.youtube.com/watch?v=SW7VUI_6Crw&ab_channel=SeyfarthShawLLP">
-				
-			</iframe>
+			<iframe width="560" height="315" src="https://www.youtube.com/embed/SW7VUI_6Crw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 			<svg id="bottom" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
 				<path fill="#FFFFFF" fill-opacity="1" 
 				d="M0,288L80,240C160,192,320,96,480,96C640,96,800,192,960,213.3C1120,235,1280,181,1360,154.7L1440,128L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z">
